# praxis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: NOTES.md  trajectory-verifier-spec.md
praxis/: __init__.py
praxis/adapters/: __init__.py
praxis/adapters/aiopslab/: __init__.py  mixin.py  normalize.py
praxis/core/: __init__.py  engine.py  model.py  report.py
praxis/core/policies/: __init__.py  base.py  judge.py  rules.py
tests/: conftest.py  test_engine.py  test_integration.py  test_judge.py  test_mixin.py  test_normalize.py  test_report.py  test_rules.py
tests/fixtures/: actions_after_submit.json  no_submit.json  ordering_violation.json  readonly_task_mutation.json  repeated_failure_loop.json  safe_localization.json  safe_mitigation.json  unparseable_turns.json
